update ithe para

--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <head></head>
 <body>
 <h1>This one is sample project</h1>
-<p>This is a paragraph</p>
+<p>This is a paragraph created by rimzx</p>
 </body>
